# synphage-ducklink

./: .gitignore  DESIGN.md  LOAD blast; SELECT 1;  README.md
acceptance/: README.md  gb_parse.py  pipeline-native.sql  pipeline-sql-only.sql  pipeline.sql  run-ducklink.sh  run-native-duckdb.sh  run-sql-only.sh  run.sh
acceptance/data/: NC_001416.gb  NC_001604.gb  NC_002371.gb
acceptance/wit-view/: world.wit
components/blast/: Cargo.toml
components/blast/src/: align.rs  bindings.rs  ducklink.rs  filter.rs  lib.rs  pushdown.rs  scoring.rs  strand.rs
components/genome-format/: Cargo.toml
components/genome-format/src/: bindings.rs  ducklink.rs  lib.rs  location.rs  model.rs  parser.rs
components/synteny-renderer/: Cargo.toml
components/synteny-renderer/src/: bindings.rs  ducklink.rs  lib.rs  render.rs
examples/tiny-blastn/: queries.fasta  subjects.fasta
hosts/blast-test/: Cargo.toml
hosts/blast-test/src/: main.rs
sql/: README.md  best_hits.sql  blast_macros.sql  gene_conservation.sql  summary.sql
wit/: genome-format-world.wit  genome-format.wit  sequence-search.wit  synteny-renderer-world.wit  synteny-renderer.wit  world.wit
