[package]
name = "blast"
version = "0.1.0"
edition = "2021"
description = "DuckLink shim for the blast-core algorithm. All logic lives in datalink/extensions/blast-core; this crate is a ~20-line `datalink_extcore::duckdb_shim!` invocation that wires blastn / blastp into DuckDB via the `duckdb:extension` WIT contract."
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.41"
wit-bindgen-rt = "0.41"
# The algorithm + capability declaration live in datalink.
blast-core = { path = "../../../datalink/extensions/blast-core" }
datalink-extcore = { path = "../../../datalink/crates/datalink-extcore" }

[package.metadata.component]
package = "tegmentum:bio-blast"

[package.metadata.component.target]
path = "../../wit"
world = "blast"

[package.metadata.component.target.dependencies]
"duckdb:extension" = { path = "../../wit/deps/duckdb-extension" }
