[package]
name = "genome-format"
version = "0.1.0"
edition = "2021"
description = "DuckLink shim for genome-format-core. All logic lives in datalink/extensions/genome-format-core; this crate is a ~20-line `datalink_extcore::duckdb_shim!` invocation that registers `genbank_scan` and `genbank_read_path` (with the .gb/.gbk replacement scan) into DuckDB via the `duckdb:extension` WIT contract."
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.41"
wit-bindgen-rt = "0.41"
genome-format-core = { path = "../../../datalink/extensions/genome-format-core" }
datalink-extcore = { path = "../../../datalink/crates/datalink-extcore" }

[package.metadata.component]
package = "tegmentum:bio-genome-format"

[package.metadata.component.target]
path = "../../wit"
world = "genome-format-ducklink"

[package.metadata.component.target.dependencies]
"duckdb:extension" = { path = "../../wit/deps/duckdb-extension" }
