[package]
name = "synteny-renderer"
version = "0.1.0"
edition = "2021"
description = "DuckLink shim for synteny-renderer-core. All logic lives in datalink/extensions/synteny-renderer-core; this crate is a ~20-line `datalink_extcore::duckdb_shim!` invocation that registers `render_synteny_svg` into DuckDB via the `duckdb:extension` WIT contract."
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.41"
wit-bindgen-rt = "0.41"
synteny-renderer-core = { path = "../../../datalink/extensions/synteny-renderer-core" }
datalink-extcore = { path = "../../../datalink/crates/datalink-extcore" }

[package.metadata.component]
package = "tegmentum:bio-synteny-renderer"

[package.metadata.component.target]
path = "../../wit"
world = "synteny-renderer-ducklink"

[package.metadata.component.target.dependencies]
"duckdb:extension" = { path = "../../wit/deps/duckdb-extension" }
